Ensure icons with text above them align on horizontal axis.

--- a/client/src/components/ClimateHazardRisk.css
+++ b/client/src/components/ClimateHazardRisk.css
@@ -1,27 +1,28 @@
 .horiz-container-hazard {
-	display: flex;
-	flex-direction: row;
+    display: flex;
+    flex-direction: row;
     overflow-x: auto;
     flex-wrap: wrap;
     width: 100%;
 }
 
 .hazard-img {
-	display: flex;
-	flex-direction: row;    
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
 .vert-container-hazard {
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
     text-align: center;
     font-size: 75%;
     width: 33.33%;
     box-sizing: border-box;
     margin-bottom: 1.5em;
-    line-height: 1.6;    
+    line-height: 1.6;
+    justify-content: space-between;
 }
 
 .hazard-text {
